infra/k8s/admin-srv.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-srv-deployment
  labels:
    app: admin-srv
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin-srv
  template:
    metadata:
      labels:
        app: admin-srv
    spec:
      restartPolicy: Always
      containers:
        - name: admin-srv
          image: muhammedajmal/skyway-admin-srv:latest
---
apiVersion: v1
kind: Service
metadata:
  name: admin-srv-service
spec:
  selector:
    app: admin-srv
  ports:
    - name: admin-srv
      protocol: TCP
      port: 3002
      targetPort: 3002
