infra/k8s/client-srv.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-srv-deployment
  labels:
    app: client-srv
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client-srv
  template:
    metadata:
      labels:
        app: client-srv
    spec:
      restartPolicy: Always
      containers:
        - name: client-srv
          image: muhammedajmal/skyway-client-srv:latest
---
apiVersion: v1
kind: Service
metadata:
  name: client-srv-service
spec:
  selector:
    app: client-srv
  ports:
    - protocol: TCP
      port: 5173
      targetPort: 5173
