infra/k8s/venture-srv.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: venture-srv-deployment
  labels:
    app: venture-srv
spec:
  replicas: 1
  selector:
    matchLabels:
      app: venture-srv
  template:
    metadata:
      labels:
        app: venture-srv
    spec:
      restartPolicy: Always
      containers:
        - name: venture-srv
          image: muhammedajmal/skyway-venture-srv:latest
          
---
apiVersion: v1
kind: Service
metadata:
  name: venture-srv-service
spec:
  selector:
    app: venture-srv
  ports:
    - protocol: TCP
      port: 3001  
      targetPort: 3001
