infra/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-skyway-host
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/websocket-services: "chat-srv-service"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.org/websocket-services: chat-srv-service
    nginx.ingress.kubernetes.io/secure-backends: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: "flyway.website"
      http:
        paths:
          - path: /api/chat-srv
            pathType: Prefix
            backend:
              service:
                name: chat-srv-service
                port:
                  number: 5003
          - path: /socket.io/
            pathType: Prefix
            backend:
              service:
                name: chat-srv-service
                port:
                  number: 5003
          - pathType: Prefix
            path: /api/user-srv
            backend:
              service:
                name: user-srv-service
                port:
                  number: 3000
          - pathType: Prefix
            path: /api/venture-srv
            backend:
              service:
                name: venture-srv-service
                port:
                  number: 3001
          - path: /api/admin-srv
            pathType: Prefix
            backend:
              service:
                name: admin-srv-service
                port:
                  number: 3002
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: client-srv-service
                port:
                  number: 5173
    - host: "www.flyway.website"
      http:
        paths:
          - path: /api/chat-srv
            pathType: Prefix
            backend:
              service:
                name: chat-srv-service
                port:
                  number: 5003
          - path: /socket.io/
            pathType: Prefix
            backend:
              service:
                name: chat-srv-service
                port:
                  number: 5003
          - pathType: Prefix
            path: /api/user-srv
            backend:
              service:
                name: user-srv-service
                port:
                  number: 3000
          - pathType: Prefix
            path: /api/venture-srv
            backend:
              service:
                name: venture-srv-service
                port:
                  number: 3001
          - path: /api/admin-srv
            pathType: Prefix
            backend:
              service:
                name: admin-srv-service
                port:
                  number: 3002
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: client-srv-service
                port:
                  number: 5173
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   annotations:
#     service.beta.kubernetes.io/do-loadbalancer-enable-proxy-protocol: 'true'
#     service.beta.kubernetes.io/do-loadbalancer-hostname: 'demo.pranavs.tech'
#   labels:
#     helm.sh/chart: ingress-nginx-2.0.3
#     app.kubernetes.io/name: ingress-nginx
#     app.kubernetes.io/instance: ingress-nginx
#     app.kubernetes.io/version: 0.32.0
#     app.kubernetes.io/managed-by: Helm
#     app.kubernetes.io/component: controller
#   name: ingress-nginx-controller
#   namespace: ingress-nginx
# spec:
#   type: LoadBalancer
#   externalTrafficPolicy: Local
#   ports:
#     - name: http
#       port: 80
#       protocol: TCP
#       targetPort: http
#     - name: https
#       port: 443
#       protocol: TCP
#       targetPort: https
#   selector:
#     app.kubernetes.io/name: ingress-nginx
#     app.kubernetes.io/instance: ingress-nginx
#     app.kubernetes.io/component: controller
